package bookCopy;

// Интерфейс Prototype

public interface Prototype {
    Prototype clone();  // Метод клонирования
}