package loan;

public interface State {
    void handle(Loan loan);
}
