package notification;

public interface Observer {
    void update(String message);
}
