package payment;

// Target (Целевой интерфейс)
interface PaymentProcessor {
    void processPayment(double amount);
}
